k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: aula360
  labels:
    app: aula360
