k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aula360-app
  namespace: aula360
  labels:
    app: aula360-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: aula360-app
  template:
    metadata:
      labels:
        app: aula360-app
    spec:
      containers:
        - name: aula360
          image: ingmontoyav/aula360:latest
          ports:
            - containerPort: 80
              protocol: TCP

          resources:
            requests:
              cpu: "100m"
              memory: "256Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          livenessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /health
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
