k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aula360
  namespace: aula360
  labels:
    app: aula360-app
spec:
  type: ClusterIP
  selector:
    app: aula360-app
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
